# embedding-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.md.orig  app.py  app2.py  docker-compose.yaml  docker-compose.yml  import-embeddings.py  local.env  main.py  opensearch_client.py  pyproject.toml  requirements.txt
